--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,60 @@
-.divider:after,
-.divider:before {
-content: "";
-flex: 1;
-height: 1px;
-background: #eee;
-}
-.h-custom {
-height: calc(100% - 73px);
-}
-@media (max-width: 450px) {
-.h-custom {
-height: 100%;
-}
-}
+/* Global Styles */
 html {
     font-size: 13px;
     font-family: "Public Sans Variable", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
-.bg-footer {
+  }
+  
+  /* Utilidades */
+  .h-custom {
+    height: calc(100% - 73px);
+  }
+  
+  @media (max-width: 450px) {
+    .h-custom {
+      height: 100%;
+    }
+  }
+  
+  /* Dividers */
+  .divider:before,
+  .divider:after {
+    content: "";
+    flex: 1;
+    height: 1px;
+    background: #eee;
+  }
+  
+  /* Footer */
+  .bg-footer {
     background-color: #0c9a7a;
     margin-top: 16px;
-} 
-
-.btn-primary {
+  }
+  
+  /* Botones */
+  .btn-primary {
     background-color: #033b5a;
-}
-.btn-primary:hover {
+  }
+  
+  .btn-primary:hover {
     background-color: #035a89;
-}
-.btn-primary:active {
+  }
+  
+  .btn-primary:active {
     background-color: #046aa1;
-}
-
-.logoSacndes {
+  }
+  
+  /* Logos y Etiquetas */
+  .logoSacndes {
     margin-top: -100px;
-}
-
-.form-label {
+  }
+  
+  .logo {
+    padding-top: 10px;
+  }
+  
+  .form-label {
     position: absolute;
     margin-top: -50px;
     margin-left: 10px;
     background-color: white;
-}
-
-.logo {
-    padding-top: 10px;
-}
+  }
