--- a/css/style_admin.css
+++ b/css/style_admin.css
@@ -1,25 +1,29 @@
+/* Global Styles */
 html {
     font-size: 13px;
     font-family: "Public Sans Variable", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
-.bg-footer {
+  }
+  
+  /* Footer */
+  .bg-footer {
     background-color: #0c9a7a;
     margin-top: 16px;
-} 
-
-.btn-primary {
-    background-color: #033b5a;
-}
-.btn-primary:hover {
-    background-color: #035a89;
-}
-.btn-primary:active {
-    background-color: #046aa1;
-}
-
-.layout {
-    width: 100%;
+  }
   
+  /* Botones Primarios */
+  .btn-primary {
+    background-color: #033b5a;
+  }
+  .btn-primary:hover {
+    background-color: #035a89;
+  }
+  .btn-primary:active {
+    background-color: #046aa1;
+  }
+  
+  /* Layout General */
+  .layout {
+    width: 100%;
     display: grid;
     grid:
       "sidebar body" 1fr
@@ -27,37 +31,39 @@ html {
     gap: 8px;
   }
   
-.sidebar {
+  /* Sidebar */
+  .sidebar {
     grid-area: sidebar;
     width: 283px;
     height: 100vh;
     border-right: 1px solid #e6e6e6;
     padding-right: 12px;
-}
-.body { grid-area: body; }
-
-.logout {
-    float: right;
-    margin-top: -42px;
-    margin-right: 25px;
-    cursor: pointer;
-}
-
-.logo {
+  }
+  
+  /* Área Principal */
+  .body {
+    grid-area: body;
+  }
+  
+  /* Elementos de Cabecera */
+  .head {
+    margin-top: 10px;
+  }
+  
+  /* Logo */
+  .logo {
     margin-top: 10px;
     margin-left: 10px;
-}
-
-.head {
-    margin-top: 10px;;
-}
-
-.menu {
+  }
+  
+  /* Menú */
+  .menu {
     margin-top: 32px;
     padding-left: 15px;
-}
-
-.sidebar-button {
+  }
+  
+  /* Botón del Sidebar */
+  .sidebar-button {
     cursor: pointer;
     width: 100%;
     height: 44px;
@@ -67,24 +73,31 @@ html {
     margin-bottom: 10px;
     font-weight: 600;
     transition: background-color 0.3s ease;
-}
-
-.sidebar-button:hover {
+  }
+  .sidebar-button:hover {
     background-color: #f6f7f8;
-}
-.sidebar-button:active {
+  }
+  .sidebar-button:active {
     background-color: #d1d1d1;
-}
-.sidebar-button.active:hover {
+  }
+  .sidebar-button.active:hover {
     background-color: #d6f1e8;
-}
-
-.sidebar-button.active {
+  }
+  .sidebar-button.active {
     color: #00a76f;
     background-color: #ebf8f4;
-}
-
-.icon {
+  }
+  
+  /* Logout */
+  .logout {
+    float: right;
+    margin-top: -42px;
+    margin-right: 25px;
+    cursor: pointer;
+  }
+  
+  /* Íconos */
+  .icon {
     width: 24px;
     height: 24px;
     flex-shrink: 0;
@@ -92,16 +105,13 @@ html {
     background-color: currentcolor;
     float: left;
     margin-right: 9px;
-}
-
-.icon-revision {
+  }
+  .icon-revision {
     mask: url(https://assets.minimals.cc/public/assets/icons/navbar/ic-file.svg) center center / contain no-repeat;
-}
-
-.icon-telefono {
+  }
+  .icon-telefono {
     mask: url(https://assets.minimals.cc/public/assets/icons/navbar/ic-user.svg) center center / contain no-repeat;
-}
-
-.icon-pensiones {
+  }
+  .icon-pensiones {
     mask: url(https://assets.minimals.cc/public/assets/icons/navbar/ic-invoice.svg) center center / contain no-repeat;
-}
+  }  
